...
          selected: !!selectedIds[memento.id],
        }))}
        onMementoPress={handleSelectMemento}
        ListHeaderComponent={
          <View className="flex justify-center gap-2">
            <Heading className="block" size="2xl">
              Select Mementos
            </Heading>
            <Text size="lg" className="text-left font-light mb-4">
              Choose which mementos you want to be stored within this
              collection!
            </Text>
          </View>
        }
        ListFooterComponent={
          <Button
            testID="submit-selected-mementos-button"
            className="mt-4"
            size={"lg"}
            onPress={handleMementosSelected}
          >
            <ButtonText>
              {selectedCount > 0
...
