...
            ${isMarker ? "-top-1 left-1" : "-top-2 left-2"}`}
        />
        {/* Actual Card with Contents */}
        <View
          className={`relative flex flex-col rounded-xl shadow-hard-3 bg-background-0 
            ${isMarker ? "w-[80px] p-[6px]" : "flex-1 gap-1 p-3"}`}
          testID="collection-card"
        >
          <View className="aspect-square flex-1">
            <Image
              source={{ uri: thumbnailUri }}
              className="h-full w-full"
              alt=""
...
