...
          className={buttonClasses}
          onPress={handleEditCollection}
        >
          <ButtonIcon as={EditIcon} className={iconClasses} />
        </Button>
        <Button
          testID="view-collection-delete-button"
          size="xl"
          className={buttonClasses}
          onPress={handleDeletePress}
        >
          <ButtonIcon as={TrashIcon} className={iconClasses} />
        </Button>
...
