...
      <View className="flex-row items-center justify-between px-4">
        {mode === "goBack" && (
          <Button
            className="p-0"
            variant="link"
            onPress={() => router.dismiss()}
            testID="header-back-button"
          >
            <ButtonIcon className="w-8 h-8" as={ChevronLeftIcon} />
          </Button>
        )}
        <MementoLogo size="sm" className="mr-2" />
        {title && mode === "avatar" && (
...
