...
      >
        <FabIcon
          className="text-typography-800 data-[hover=true]:text-typography-800 data-[active=true]:text-typography-800"
          as={showMapView ? LayoutGridIcon : MapIcon}
        />
        <FabLabel className="text-typography-800 data-[hover=true]:text-typography-800 data-[active=true]:text-typography-800">
          {showMapView ? "Grid" : "Map"}
        </FabLabel>
      </Fab>
    </Box>
  );
}

...
