...
      <View className="flex-row items-center gap-x-2 mb-4">
        <Input className="flex-1 bg-background-0">
          <InputSlot className="pl-3">
            <InputIcon as={SearchIcon} />
          </InputSlot>
          <InputField
            testID="mementos-search-bar"
            placeholder="Search..."
            value={searchText}
            onChangeText={setSearchText}
          />
        </Input>

        <Button
          testID="mementos-filter-button"
          size="md"
          variant="link"
          className="rounded-full p-3.5 relative"
          onPress={() => setShowActionsheet(true)}
        >
          <ButtonIcon as={ListFilter} />
...
