...
          data={[]}
          renderItem={() => <></>}
          showsVerticalScrollIndicator={false}
          keyboardShouldPersistTaps="handled"
          ListHeaderComponent={
            <Box className="w-full flex justify-center gap-6">
              <Heading>Filter Mementos</Heading>
              <Divider />
              <FormControl size={"lg"}>
                <FormControlLabel>
                  <FormControlLabelText>Start Date</FormControlLabelText>
                </FormControlLabel>
                <Controller
...
                  }}
                />
              </FormControl>
              <Divider />
              <ButtonGroup>
                <Button
                  testID="filter-sheet-clear-button"
                  size={"lg"}
                  onPress={() => {
                    reset();
                    onSubmit(defaultValues);
                    handleClose();
                  }}
...
