---
appId: com.memento.app
---
- runFlow: ./util/launch.yml
- runFlow: ./util/remove-all-mementos.yml
- runFlow: ./util/remove-all-collections.yml

- runFlow:
    file: ./util/create-test-memento.yml
    env:
      CAPTION: "Test Memento for Collection"
      LOCATION_PARTIAL: "Edmon"
      LOCATION_FULL: "Edmonton, AB, Canada"

# Navigate to Create Collection page
- tapOn:
    id: tab-collections
- tapOn:
    id: fab-create-collection
- assertVisible: Create Collection

# Select Mementos
- assertNotVisible:
    id: memento-card
- tapOn:
    id: collection-form-select-mementos-button
- assertVisible: Select Mementos
- assertVisible:
    id: memento-card
#
# # Verify FR-41
- tapOn:
    id: memento-card
- assertVisible:
    id: selected-memento-card-fab

- scrollUntilVisible:
    element:
      id: submit-selected-mementos-button
    direction: DOWN
    timeout: 50000
    speed: 40
    visibilityPercentage: 100
    centerElement: false
- tapOn:
    id: submit-selected-mementos-button

# # Verify FR-7/FR-9: extract metadata and fill fields
# - assertVisible: Edmonton, AB, Canada
- tapOn:
    id: accept-derived-metadata-button

# Verify FR-37: Fill out other form fields
- runFlow:
    file: ./util/collection-form.yml
    env:
      TITLE: "Collection made by Maestro"
      CAPTION: "Collection made by Maestro"
      LOCATION_PARTIAL: "Edmon"
      LOCATION_FULL: "Edmonton, AB, Canada"

# Verify new memento added to grid view
- assertVisible: Collections
- assertVisible: Collection made by Maestro
- assertVisible: ^\d{4}-\d{2}-01$
- assertVisible: Edmonton
