---
appId: com.memento.app
---
- runFlow: launch.yml

# Navigate to View Collection page
- tapOn:
    id: tab-collections

# Remove mementos while mementos on screen
- repeat:
    while:
      visible:
        id: collection-card
    commands:
      - tapOn:
          id: collection-card
      - tapOn:
          id: view-collection-delete-button
      - tapOn:
          id: delete-modal-confirm
