appId: com.memento.app
---
- assertVisible: Mementos
- tapOn:
    id: mementos-search-bar
- eraseText
- hideKeyboard
- tapOn:
    id: mementos-filter-button
- assertVisible: Filter Mementos
- tapOn:
    id: filter-sheet-clear-button
